--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-fontawesome": "^1.7.1",
     "react-scripts": "3.3.0",
     "styled-components": "^5.0.0",
     "styled-flex-component": "^3.0.0",
